[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = zeeko
description = Zeeko - A ZeroMQ Array Streaming Interface
long_description = Package to stream numpy arrays over ZeroMQ
author = Alex Rudy
author_email = arrudy@ucsc.edu
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy

[entry_points]
