[metadata]
name = zeeko
description = Zeeko - A ZeroMQ Array Streaming Interface
long_description = Package to stream numpy arrays over ZeroMQ
author = Alex Rudy
author_email = arrudy@ucsc.edu
license = BSD
url = http://zeeko.readthedocs.io/
edit_on_github = True
github_project = alexrudy/zeeko
version = 0.2.dev
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; pyzmq>=15.4.0; h5py
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =


[options.package_data]
* = *.c
zeeko = data/*
zeeko.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
